added bidi stream
